# UnrealEngineKnowledgeBaseMaker

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  QUICK_START.md  README.md  STATUS.md  pyproject.toml  test_full_init.py  test_parser_fix.py  test_scan_buildcs.py
.claude/: settings.local.json
.claude/skills/ue5kb-dev-guide/: impl.py  skill.md
archived/docs/: STATUS.md
archived/scripts/: fix_template.py
archived/tests/: test_architecture_upgrade.py  test_init.py
docs/: ARCHITECTURE_UPGRADE_PLAN.md  CONTEXT_OPTIMIZATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GUIDE_PHASE1.md
templates/: impl.plugin.py.template  impl.py.template  skill.md.template  skill.plugin.md.template
tests/: demo_context_optimization.py  test_cpp_parser_v2.py
ue5_kb/: cli.py
ue5_kb/analyzers/: call_analyzer.py  example_extractor.py
ue5_kb/builders/: global_index_builder.py  header_cpp_mapper.py  module_graph_builder.py  partitioned_builder.py  plugin_index_builder.py
ue5_kb/core/: class_index.py  config.py  enum_index.py  function_index.py  global_index.py  manifest.py  module_graph.py  optimized_index.py
ue5_kb/parsers/: buildcs_parser.py  cpp_parser.py
ue5_kb/pipeline/: __init__.py  analyze.py  analyze_parallel.py  base.py  build.py  build_parallel.py  coordinator.py  discover.py  extract.py  extract_parallel.py  generate.py  state.py  update.py
ue5_kb/query/: layered_query.py  result_cache.py  token_budget.py
ue5_kb/utils/: __init__.py  auto_detect.py  checkpoint_manager.py  progress_tracker.py  stage_timer.py
(+14 files in other folders)
